@@ -907,7 +907,7 @@
 2258,13,8,1,0,0,0,3,1,no,0,0,0,weapon,0,	NC_VULCANARM,Vulcan Arm
 2259,5,6,1,3,0x2,3,3,1,no,0,0,0,weapon,0,	NC_FLAMELAUNCHER,Flame Launcher
 2260,7,6,2,1,0x2,5:7:9,3,1,no,0,0,0,weapon,0,	NC_COLDSLOWER,Cold Slower
-2261,7,8,1,0,0x42,7:5:3,3,1,no,0,0,0,weapon,0,	NC_ARMSCANNON,Arm Cannon
+2261,7,6,2,0,0x42,7:5:3,3,1,no,0,0,0,weapon,0,	NC_ARMSCANNON,Arm Cannon
 2262,0,6,4,0,0x1,0,3,1,yes,0,0,0,none,0,	NC_ACCELERATION,Acceleration
 2263,0,6,4,0,0x1,0,1,1,yes,0,0,0,none,0,	NC_HOVERING,Hovering
 //2264,0,6,4,0,0x1,0,1,1,no,0,0,0,none,0,		NC_F_SIDESLIDE,Front-Side Slide
